--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/mark19891107/web-jekyll#readme",
   "dependencies": {
     "@google-cloud/translate": "^1.1.0",
+    "colcade": "^0.2.0",
     "flag-icon-css": "^3.4.2",
     "json2yaml": "^1.1.0",
     "yaml-front-matter": "^4.0.0"
