--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -9,11 +9,31 @@
     twitter: https://twitter.com/audreyt
     facebook: https://facebook.com/shu.w.zhengwei
     instagram: https://www.instagram.com/digitalminister
-張皓婷:
-    wiselike: 'https://wiselike.tw/#/user/haoting'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/haoting/240/10766_2.png'
+葉寧:
+    wiselike: 'https://wiselike.tw/#/user/ningyeh'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/ningyeh/800/676_1.png'
     status: current
-    name: 張皓婷
+    name: 葉寧
+    name_en: Ning Yeh
+黃子維:
+    wiselike: 'https://wiselike.tw/#/user/zach'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/zach/800/589_1.png'
+    status: current
+    name: 黃子維
+    name_en: Zach Huang
+薛雅婷:
+    wiselike: 'https://wiselike.tw/#/user/Wendy'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/wendy/800/638_1.png'
+    status: current
+    name: 薛雅婷
+    name_en: Wendy Hsueh
+展銘:
+    description: 我不是長頸鹿  我不是長頸鹿   我不是長頸鹿
+    wiselike: 'https://wiselike.tw/#/user/targee'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/targee/800/588_1.png'
+    status: current
+    name: "☕️展銘🐘"
+    name_en: targee
 蕭郁溏:
     wiselike: 'https://wiselike.tw/#/user/AvrossHsiao'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/avrosshsiao/800/577_1.png'
@@ -41,6 +61,7 @@
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chlai/800/576_1.png'
     status: current
     name: 賴致翔
+    name_en: Smart Lai
 陳怡君:
     wiselike: 'https://wiselike.tw/#/user/chun'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chun/240/729_1.png'
@@ -57,91 +78,82 @@
     status: current
     name: 貢丸
     name_en: D.Y. Chien
-張芳睿:
-    wiselike: 'https://wiselike.tw/#/user/fang'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/fang/800/579_1.png'
-    status: current
-    name: 張芳睿
-周紹文:
-    description: 行政院 公共數位創新小組 替代役
-    wiselike: 'https://wiselike.tw/#/user/john5601'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/john5601/800/580_1.png'
-    status: former
-    name: 周紹文
-簡就可:
-    status: current
-    name: 簡就可
-    name_en: Joke
-    description: 影像工作者／前端開發者。
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/jokeum/800/581_1.png'
-    wiselike: 'https://wiselike.tw/#/user/jokeum'
-    email: joke@pdis.tw
-    facebook: https://facebook.com/jokeum
-    twitter: https://twitter.com/jokeum
-Mark:
-    description: 好熱！好熱！
-    wiselike: 'https://wiselike.tw/#/user/markdai'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/markdai/800/582_1.png'
-    status: former
-    name: Mark
-陳牧:
-    wiselike: 'https://wiselike.tw/#/user/MuChen'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/muchen/800/590_1.png'
-    status: former
-    name: 陳牧
-張庭瑜:
-    description: 感恩PDIS，讚嘆PDIS
-    wiselike: 'https://wiselike.tw/#/user/Naxus'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/naxus/800/583_1.png'
-    status: current
-    name: 張庭瑜
-葉寧:
-    wiselike: 'https://wiselike.tw/#/user/ningyeh'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/ningyeh/800/676_1.png'
-    status: current
-    name: 葉寧
 蔡仲明:
     description: 資策會派來的台灣社會數位化打手 ._.
     wiselike: 'https://wiselike.tw/#/user/romulus'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/romulus/800/585_1.png'
     status: former
     name: 蔡仲明
+林宗禧:
+    wiselike: ''
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/linjose/800/109_1.png'
+    status: former
+    name: 林宗禧
+李建平:
+    wiselike: ''
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/rodlee/800/113_1.png'
+    status: former
+    name: 李建平
 林書漾:
     description: 在公共數位創新空間小組進行一個設計的動作
     wiselike: 'https://wiselike.tw/#/user/shuyanglin'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shuyanglin/800/605_1.png'
     status: current
     name: 林書漾
+    name_en: Shu-Yang Lin
+周紹文:
+    description: 行政院 公共數位創新小組 替代役
+    wiselike: 'https://wiselike.tw/#/user/john5601'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/john5601/800/580_1.png'
+    status: former
+    name: 周紹文
 林正東:
     description: 行政院 公共數位創新小組 (PDIS) / wiselike 貢獻者
     wiselike: 'https://wiselike.tw/#/user/smith02620'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/smith02620/800/587_1.png'
     status: former
     name: 林正東
+Mark:
+    description: 好熱！好熱！
+    wiselike: 'https://wiselike.tw/#/user/markdai'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/markdai/800/582_1.png'
+    status: former
+    name: Mark
+簡就可:
+    status: current
+    name: 簡就可
+    name_en: Joke
+    description: 影像顧問、前端工程師
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/jokeum/800/581_1.png'
+    wiselike: 'https://wiselike.tw/#/user/jokeum'
+    email: joke@pdis.tw
+    facebook: https://facebook.com/jokeum
+    twitter: https://twitter.com/jokeum
+    instagram: https://www.instagram.com/joke.um/
+張庭瑜:
+    description: 感恩PDIS，讚嘆PDIS
+    wiselike: 'https://wiselike.tw/#/user/Naxus'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/naxus/800/583_1.png'
+    status: current
+    name: 張庭瑜
+    name_en: Naxus Chang
+陳牧:
+    wiselike: 'https://wiselike.tw/#/user/MuChen'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/muchen/800/590_1.png'
+    status: former
+    name: 陳牧
+張芳睿:
+    wiselike: 'https://wiselike.tw/#/user/fang'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/fang/800/579_1.png'
+    status: current
+    name: 張芳睿
+    name_en: Fang-Jui Chang
 彭筱婷:
     wiselike: 'https://wiselike.tw/#/user/stpeng'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/stpeng/800/659_1.png'
     status: current
     name: 彭筱婷
     name_en: Sheau-Tyng Peng
-展銘:
-    description: 我不是長頸鹿  我不是長頸鹿   我不是長頸鹿
-    wiselike: 'https://wiselike.tw/#/user/targee'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/targee/800/588_1.png'
-    status: current
-    name: "☕️展銘🐘"
-薛雅婷:
-    wiselike: 'https://wiselike.tw/#/user/Wendy'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/wendy/800/638_1.png'
-    status: current
-    name: 薛雅婷
-    name_en: Wendy Hsueh
-黃子維:
-    wiselike: 'https://wiselike.tw/#/user/zach'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/zach/800/589_1.png'
-    status: current
-    name: 黃子維
-    name_en: Zach Huang
 雨蒼:
     description: 自由軟體工作者、公民記者
     wiselike: 'https://wiselike.tw/#/user/billy3321'
@@ -159,27 +171,25 @@ Mark:
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shbhsu/300/686_1.png'
     status: former
     name: 許舜博
-林宗禧:
-    wiselike: ''
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/linjose/800/109_1.png'
-    status: former
-    name: 林宗禧
-李建平:
-    wiselike: ''
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/rodlee/800/113_1.png'
-    status: former
-    name: 李建平
+張皓婷:
+    wiselike: 'https://wiselike.tw/#/user/haoting'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/haoting/240/10766_2.png'
+    status: current
+    name: 張皓婷
+    name_en: Haoting Chang
 莊秉倫:
     description: 半路出家到資工系研究生，立志成為從機房到 UI/UX 都會的 Full Stack 工程師
     wiselike: ''
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/bingluen/800/746_1.png'
     status: current
     name: 莊秉倫
+    name_en: Bing-Lung Chuang
 詹壹雯:
     wiselike: 'https://wiselike.tw/#/user/yiwenchan'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/315yiwenchan/240/10653_1.png'
     status: current
     name: 詹壹雯
+    name_en: Yi-Wen Chan
 蔡琬梅:
     wiselike: ''
     avatar: 'https://graph.facebook.com/699755368/picture?type=large'
@@ -196,16 +206,25 @@ Mark:
     avatar: 'https://i.imgur.com/1WCNW9J.jpg'
     status: current
     name: 蔡玉琪
+    name_en: Yu-Chi Tsai
 陳裕興:
     wiselike: ''
     avatar: 'https://i.imgur.com/NyzXlHw.jpg'
     status: current
     name: 陳裕興
+    name_en: Joel Chen
 許恩恩:
     wiselike: ''
     avatar: 'https://graph.facebook.com/1350982080/picture?type=large'
     status: current
     name: 許恩恩
+    name_en: Ann Hsu
+周詳:
+    status: current
+    name: 周詳
+    name_en: ''
+    wiselike: ''
+    avatar: ''
 ########## RAY ##########
 chiachichang:
     wiselike: ''
