--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -222,9 +222,9 @@ Mark:
 周詳:
     status: current
     name: 周詳
-    name_en: ''
+    name_en: 'Sean Chou'
     wiselike: ''
-    avatar: ''
+    avatar: 'https://i.imgur.com/OGr3YPL.jpg'
 ########## RAY ##########
 chiachichang:
     wiselike: ''
