--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -215,10 +215,12 @@ Mark:
     name_en: Joel Chen
 許恩恩:
     wiselike: ''
-    avatar: 'https://graph.facebook.com/1350982080/picture?type=large'
+    description: 社會運動研究。公民審議。主持溝通技巧。
+    avatar: 'https://scontent-tpe1-1.xx.fbcdn.net/v/t1.0-9/118322353_10217252009956225_4601302116171830143_n.jpg?_nc_cat=109&ccb=2&_nc_sid=174925&_nc_ohc=R4NVdSqVXnQAX8iMCc_&_nc_ht=scontent-tpe1-1.xx&oh=c6a113bed6d49e8f90048f050e71527c&oe=5FC40D88'
     status: current
     name: 許恩恩
     name_en: Ann Hsu
+    facebook: https://www.facebook.com/enenkoyako/
 周詳:
     status: current
     name: 周詳
