--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,6 +6,7 @@
     description: 數位政務委員，業務為社會創新、青年參與、開放政府。
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/audreyt/800/574_1.png'
     wiselike: 'https://wiselike.tw/#/user/audreyt'
+    email: audreyt@audreyt.org
     twitter: https://twitter.com/audreyt
     facebook: https://facebook.com/shu.w.zhengwei
     instagram: https://www.instagram.com/digitalminister
