--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,20 @@
 jobs:
   if: branch = master
   include:
-##### archive image - if image save on talk.pdis.nat.gov.tw
-    - stage: archive-image
-      before_install:
-        - sudo apt-get install -y optipng jpegoptim
-      script:
-        - ./build/archive-image.sh
-
-##### translate stage - Check if there have articles need to translate #####
-    - stage: translate
+    - stage: building
       language: node_js
       node_js: 8.9.1
-      script:
-        - ./build/translate.sh
       before_install:
+        - sudo apt-get install -y optipng jpegoptim
         - openssl aes-256-cbc -K $encrypted_2fb15357d122_key -iv $encrypted_2fb15357d122_iv -in GCP.json.enc -out GCP.json -d
         - echo -e "machine github.com\n  login $GITHUB_TOKEN" > ~/.netrc
-#      - git lfs pull
+      script:
+        ##### archive image - if image save on talk.pdis.nat.gov.tw
+        - ./build/archive-image.sh
+        ##### translate stage - Check if there have articles need to translate
+        - ./build/translate.sh
+        - git push origin master
+        
 
 ##### deploy stage - Deploy to gh-pages #####
     - stage: deploy
