--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -68,6 +68,7 @@
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chun/240/729_1.png'
     status: current
     name: 陳怡君
+    name_en: Yi-Chun Chen
 陳彥佑:
     wiselike: 'https://wiselike.tw/#/user/CYY'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/cyy/800/578_1.png'
