--- a/.github/actions/commit-if-change/action.yml
+++ b/.github/actions/commit-if-change/action.yml
@@ -8,7 +8,7 @@ inputs:
   commit_user_email:
     description: 'Email for commit'
     required: true
-    default: 'bingluen0224@gmail.com'
+    default: 'github_action@pdis.twq'
   custom_commit_message:
     description: 'Commit message'
     required: true
