--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -161,7 +161,7 @@ Mark:
     status: former
     name: 雨蒼
 李忠和:
-    description: 行政院 公共數位創新小組 (PDIS) 服役中
+    description: Software Engineer in Backend and Data
     wiselike: 'https://wiselike.tw/#/user/peterlee'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/peterlee/240/727_1.png'
     status: former
