--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -164,7 +164,7 @@ Mark:
     description: Software Engineer in Backend and Data
     wiselike: 'https://wiselike.tw/#/user/peterlee'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/peterlee/240/727_1.png'
-    status: former
+    status: current
     name: 李忠和
 許舜博:
     wiselike: 'https://wiselike.tw/#/user/shbhsu'
