update Mickey 's avatar & adjust all res to 800

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -65,7 +65,7 @@
     name_en: Smart Lai
 陳怡君:
     wiselike: 'https://wiselike.tw/#/user/chun'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chun/240/729_1.png'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/chun/800/729_1.png'
     status: current
     name: 陳怡君
     name_en: Yi-Chun Chen
@@ -157,23 +157,23 @@ Mark:
 雨蒼:
     description: 自由軟體工作者、公民記者
     wiselike: 'https://wiselike.tw/#/user/billy3321'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/billy3321/240/727_1.png'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/billy3321/800/727_1.png'
     status: former
     name: 雨蒼
 李忠和:
     description: Software Engineer in Backend and Data
     wiselike: 'https://wiselike.tw/#/user/peterlee'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/peterlee/240/727_1.png'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/peterlee/800/727_1.png'
     status: current
     name: 李忠和
 許舜博:
     wiselike: 'https://wiselike.tw/#/user/shbhsu'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shbhsu/300/686_1.png'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shbhsu/800/686_1.png'
     status: former
     name: 許舜博
 張皓婷:
     wiselike: 'https://wiselike.tw/#/user/haoting'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/haoting/240/10766_2.png'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/haoting/800/10766_2.png'
     status: current
     name: 張皓婷
     name_en: Haoting Chang
@@ -185,13 +185,13 @@ Mark:
     name_en: Bing-Lung Chuang
 詹壹雯:
     wiselike: 'https://wiselike.tw/#/user/yiwenchan'
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/315yiwenchan/240/11225_2.png'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/315yiwenchan/800/11225_2.png'
     status: current
     name: 詹壹雯
     name_en: Yi-Wen Chan
 彭美琪:
     wiselike: 'https://wiselike.tw/#/user/mcpeng'
-    avatar: 'https://i.imgur.com/TtNK6ap.png'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/mcpeng/800/11226_2.png'
     name: 彭美琪
     name_en: Mickey Peng
     status: current
@@ -292,7 +292,7 @@ FanWenHsuan:
     name: 賴力維
 陳典佑:
     description: 一個銘傳資工大二的學生，現在經常在 SITCON 社群活動。
-    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/yoyo930021/240/3755_1.png'
+    avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/yoyo930021/800/3755_1.png'
     status: intern
     name: 陳典佑
 yunhuichen:
