--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -184,7 +184,7 @@ Mark:
     name: 莊秉倫
     name_en: Bing-Lung Chuang
 詹壹雯:
-    wiselike: 'https://wiselike.tw/#/user/yiwenchan'
+    wiselike: 'https://wiselike.tw/#/user/315yiwenchan'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/315yiwenchan/800/11225_2.png'
     status: current
     name: 詹壹雯
