--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -166,6 +166,7 @@ Mark:
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/peterlee/800/727_1.png'
     status: current
     name: 李忠和
+    name_en: CHUNG-HO LEE (Peter Lee)
 許舜博:
     wiselike: 'https://wiselike.tw/#/user/shbhsu'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/shbhsu/800/686_1.png'
