--- a/_i18n/zh-TW.yml
+++ b/_i18n/zh-TW.yml
@@ -17,8 +17,6 @@ site:
   cc-by-nc-nd: <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="創用 CC 授權條款" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/80x15.png"></a>（本著作係採用<a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">創用 CC 姓名標示-非商業性-禁止改作 4.0 國際 授權條款</a>授權。）
   copyright: 本著作適用中華民國著作權法相關規定
 
-#---------------------------------------------------------------------------------------------------
-
 contact-us:
   current: 現任成員
   former: 前任成員
@@ -47,78 +45,40 @@ features:
       content: 青年事務，青年作主
       link: https://advisory.yda.gov.tw/
       image: /images/youth-engagement.png
-#---------------------------------------------------------------------------------------------------
 
 tools:
   title: 我們常用的工具
   list:
-    - image : https://www.jpl.nasa.gov/images/mars/20150121/mars20150121-16.jpg
-      content : >
-        #### 虛擬實境
-
-        面對面的審議由於人數眾多，難免造成混亂。虛擬實境可以讓參與者身處數位環境當中，並提供參與者更多的技術支援。看看唐鳳拍攝的影片，一起來體會虛擬實境在公民參與上的應用。
-
-
-        [https://www.youtube.com/watch?v=EynGwOoxlSE](https://www.youtube.com/watch?v=EynGwOoxlSE)
-    - image : https://cdn-az.allevents.in/banners/7e3a7ec128de0e9aa598fcf9cc4b1a03
-      content : >
-        #### ORID
-
-        ORID（Objective, Reflective, Interpretive, Decisional）是理想上由協調人所帶領之結構化對話的其中一種進行方式。藉著羅列對特定主題的客觀事實、主觀感受、所產生的想法以及決定，自然地引導參與者達成共識。在面對較複雜的話題時，這個方法通常用於建構對話，幫助會議討論並聚焦在關鍵問題上。
-
-
-        [http://pacific-edge.info/2010/08/orid/](http://pacific-edge.info/2010/08/orid/)
-    - image : https://experience.sap.com/wp-content/uploads/2014/09/BusinessOrigami1.png
-      content : >
-        #### 商業摺紙
-
-        商業摺紙（Business Origami）是日立設計中心發明的方法。 商業摺紙使用剪紙作為人、團體、溝通管道和環境的象徵，以建立系統的微型模型。 剪紙會放在白板或大紙上，繪製不同區域的系統元素，以及元素之間的相互作用與資訊流動。
-
-
-        [https://experience.sap.com/skillup/business-origami/](https://experience.sap.com/skillup/business-origami/)
-    - image : /assets/imgs/aa65cbe7a0d54121fac5cb90155c6abc82c90c5a_2_1380x822.jpg
-      content : >
-        #### 看板
-
-        看板（Kanban）是豐田工業工程師Taiichi Ohno所開發的生產排程控制工具，用以控管供應鏈以提高生產效率。如今，看板已經成為管理專案的有效工具，特別用於是產出與目標明確的專案。Trello是供專案管理使用的線上版看板。
-
-
-        [https://en.wikipedia.org/wiki/Kanban#cite_note-13](https://en.wikipedia.org/wiki/Kanban#cite_note-13)
-
-
-        [https://trello.com/](https://trello.com/)
-    - image : /assets/imgs/d9fd08d834df91f050e135aeb458dce25464f34d.png
-      content : >
-        #### Sandstorm
-
-        [Sandstorm](https://sandstorm.io/) 是可以自己架設的網站生產力套組。我們在政府網路內架設Sandstorm，並與其他公務人員一起使用。Sandstorm是方便的線上平台，有協作應用程式或工具，比如共享文件、共享資料夾、即時訊息系統、圖表繪製工具等等。我們還提供了新的Sandstorm應用程式，如可以協作的電子表格 [EtherCalc](https://apps.sandstorm.io/app/a0n6hwm32zjsrzes8gnjg734dh6jwt7x83xdgytspe761pe2asw0) 與書籤 [Linksholder](https://apps.sandstorm.io/app/upcmp5j10r4x8j7kdfram8xx41ujvqjw0hq8ed2y72hky552znk0)。
-    - image : /assets/imgs/a420fb0c56275507fe6bce4f5778c2915ef76edd.png
-      content : >
-        #### OKR
-
-        目標和主要成果（Objectives and Key Results, OKR）是目標管理的有效系統，用於在組織中設定、傳達目標與結果。OKR的主要目標勢將公司、團隊或個人目標與可測量的結果相互結合，使工作能往正確的方向前進。目前，PDIS團隊使用 [Discourse](http://www.discourse.org/) 作為OKR的後端。
-    - image : /assets/imgs/d0861fa78a4c3cc0afaa02c510c11d5d6d46e68f.png
-      content : >
-        #### 人物誌
-
-        人物誌（Personas）是虛構出現實中的個人形象，用於描述目標受中的特定族群。透過把這個人物以及相似人群的行為、行動與喜好繪製成「人物角色」，就能以這個人物角色理解這群人。以建立人物角色的方式展現人物的特徵，就不會失去這個人物之所以成為該人物的細節。
+    - image: https://cdn-az.allevents.in/banners/7e3a7ec128de0e9aa598fcf9cc4b1a03
+      title: ORID
+      content: ORID（Objective, Reflective, Interpretive, Decisional）是理想上由協調人所帶領之結構化對話的其中一種進行方式。藉著羅列對特定主題的客觀事實、主觀感受、所產生的想法以及決定，自然地引導參與者達成共識。在面對較複雜的話題時，這個方法通常用於建構對話，幫助會議討論並聚焦在關鍵問題上。
+      link: http://pacific-edge.info/2010/08/orid/
+    - image: /assets/imgs/aa65cbe7a0d54121fac5cb90155c6abc82c90c5a_2_1380x822.jpg
+      title: 看板
+      content: 看板（Kanban）是豐田工業工程師Taiichi Ohno所開發的生產排程控制工具，用以控管供應鏈以提高生產效率。如今，看板已經成為管理專案的有效工具，特別用於是產出與目標明確的專案。Trello是供專案管理使用的線上版看板。
+      link: https://en.wikipedia.org/wiki/Kanban#cite_note-13
+    - image: /assets/imgs/d9fd08d834df91f050e135aeb458dce25464f34d.png
+      title: Sandstorm
+      content: "[Sandstorm](https://sandstorm.io/) 是可以自己架設的網站生產力套組。我們在政府網路內架設Sandstorm，並與其他公務人員一起使用。Sandstorm是方便的線上平台，有協作應用程式或工具，比如共享文件、共享資料夾、即時訊息系統、圖表繪製工具等等。我們還提供了新的Sandstorm應用程式，如可以協作的電子表格 [EtherCalc](https://apps.sandstorm.io/app/a0n6hwm32zjsrzes8gnjg734dh6jwt7x83xdgytspe761pe2asw0) 與書籤 [Linksholder](https://apps.sandstorm.io/app/upcmp5j10r4x8j7kdfram8xx41ujvqjw0hq8ed2y72hky552znk0)。"
+    - image: /assets/imgs/a420fb0c56275507fe6bce4f5778c2915ef76edd.png
+      title: OKR
+      content: 目標和主要成果（Objectives and Key Results, OKR）是目標管理的有效系統，用於在組織中設定、傳達目標與結果。OKR的主要目標勢將公司、團隊或個人目標與可測量的結果相互結合，使工作能往正確的方向前進。目前，PDIS團隊使用 [Discourse](http://www.discourse.org/) 作為OKR的後端。
+    - image: /assets/imgs/d0861fa78a4c3cc0afaa02c510c11d5d6d46e68f.png
+      title: 人物誌
+      content: 人物誌（Personas）是虛構出現實中的個人形象，用於描述目標受中的特定族群。透過把這個人物以及相似人群的行為、行動與喜好繪製成「人物角色」，就能以這個人物角色理解這群人。以建立人物角色的方式展現人物的特徵，就不會失去這個人物之所以成為該人物的細節。
         這樣的角色扮演有助於確保工作始終專注在使用者上，而不是對他們相應群體的抽象描述。
-
-
-        [Personas](http://diytoolkit.org/tools/personas-2/)
-
-    - image : /assets/imgs/3ac47f8f3a63361a1664d066aa7b38d7a9ffb244_2_1380x974.png
-      content : >
-        #### 使用者體驗旅程
-
-        使用者體驗旅程（User Journeys）是展示人們如何與服務逐步進行互動的過程。透過使用者體驗旅程，工作團隊可以確定服務流程上的問題點，以確認新的點子可以改善哪些部分。
-
-
-        [User Journeys](http://www.servicedesigntoolkit.org/assets2013/posters/EN/S6-users-journeys-A0.pdf)
+      link: http://diytoolkit.org/tools/personas-2/
+    - image: /assets/imgs/3ac47f8f3a63361a1664d066aa7b38d7a9ffb244_2_1380x974.png
+      title: 使用者體驗旅程
+      content: 使用者體驗旅程（User Journeys）是展示人們如何與服務逐步進行互動的過程。透過使用者體驗旅程，工作團隊可以確定服務流程上的問題點，以確認新的點子可以改善哪些部分。
+      link: http://www.servicedesigntoolkit.org/assets2013/posters/EN/S6-users-journeys-A0.pdf
+    - image: https://i.ytimg.com/vi/EynGwOoxlSE/sddefault.jpg
+      title: 虛擬實境
+      content: 面對面的審議由於人數眾多，難免造成混亂。虛擬實境可以讓參與者身處數位環境當中，並提供參與者更多的技術支援。看看唐鳳拍攝的影片，一起來體會虛擬實境在公民參與上的應用。
+      link: https://www.youtube.com/watch?v=EynGwOoxlSE
 
 track:
   license: 本頁逐字紀錄部分，內容以創用 CC0 授權條款釋出。
-#---------------------------------------------------------------------------------------------------
 
 ref:
   title: 相關連結
