fix enen's avatar & add vivian to current

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -223,12 +223,17 @@ Mark:
     name_en: Joel Chen
 馮瓊儀:
     avatar: 'https://i.imgur.com/mE7pLTF.png'
-    status: current
+    status: former
     name: 馮瓊儀
     name_en: Frances Feng
+孫蕙英:
+    avatar: 'https://i.imgur.com/Xmn3wiE.png'
+    status: current
+    name: 孫蕙英
+    name_en: Vivian Sun
 許恩恩:
     description: 社會運動研究。公民審議。主持溝通技巧。
-    avatar: 'https://scontent.ftpe8-2.fna.fbcdn.net/v/t1.6435-9/187764312_10218901968724163_2587378360529854085_n.jpg?_nc_ht=scontent.ftpe8-2.fna&_nc_ohc=NP2sJwCQT3gAX-sp7t-&oh=00_AT-mJcLCXM4QMmC5Y2WQ_-GIhj1JYbtwuNo8R9cAWoWeDA&oe=61E30F2E'
+    avatar: 'https://i.imgur.com/2grxLFV.jpg'
     status: current
     name: 許恩恩
     name_en: Ann Hsu
