--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -40,7 +40,7 @@ features:
       link: https://si.taiwan.gov.tw/?lang=en
       image: /images/social-innovation.png
     - icon: all_inclusive
-      title: Youth Engagement
+      title: Youth Participation
       # content: We offer guide to private sectors, establish dialogue channels between community, and facilitate peer network for local, national and international partners.
       content: Youth affairs, youth decision.
       link: https://advisory.yda.gov.tw/
