Update status and English name

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -181,9 +181,9 @@ Mark:
 莊秉倫:
     description: 半路出家到資工系研究生，立志成為從機房到 UI/UX 都會的 Full Stack 工程師
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/bingluen/800/746_1.png'
-    status: current
+    status: former
     name: 莊秉倫
-    name_en: Bing-Lung Chuang
+    name_en: Bing-Lun Zhuang
 詹壹雯:
     wiselike: 'https://wiselike.tw/#/user/315yiwenchan'
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/315yiwenchan/800/11225_2.png'
