set Mickey to former

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -195,7 +195,7 @@ Mark:
     avatar: 'https://talk.pdis.nat.gov.tw/user_avatar/talk.pdis.nat.gov.tw/mcpeng/800/11226_2.png'
     name: 彭美琪
     name_en: Mickey Peng
-    status: current
+    status: former
 蔡君蘋:
     name: 蔡君蘋
     name_en: Apple Tsai
