--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -8,7 +8,7 @@
     wiselike: 'https://wiselike.tw/#/user/audreyt'
     email: audreyt@audreyt.org
     twitter: https://twitter.com/audreyt
-    facebook: https://facebook.com/shu.w.zhengwei
+    facebook: https://facebook.com/digitalminister.tw
     instagram: https://www.instagram.com/digitalminister
 葉寧:
     wiselike: 'https://wiselike.tw/#/user/ningyeh'
