--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -106,11 +106,12 @@ jobs:
         with:
           github_token: $GITHUB_TOKEN
           author_email: $DEPLOY_USER_EMAIL
-          author_name: DEPLOY_USER_NAME
-          message: "Deploy $GITHUB_SHA to GitHub Pages"
+          author_name: $DEPLOY_USER_NAME
+          message: 'Deploy $GITHUB_SHA to GitHub Pages'
           branch: gh-pages
           force: true
           directory: $PUBLISH_DIR
+        run: 'echo $PUBLISH_DIR'
           
         #run: |
         #  cd $PUBLISH_DIR
