--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -83,7 +83,7 @@ jobs:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       DEPLOY_USER_NAME: Deploy-GitHub-Action
       DEPLOY_USER_EMAIL: github_action@pdis.tw
-      PUBLISH_DIR: ./_site
+      PUBLISH_DIR: /home/runner/work/web-jekyll/web-jekyll/_site
       ENCRYPT_KEY: ${{ secrets.ENCRYPTED_2FB15357D122_KEY }}
       ENCRYPT_IV: ${{ secrets.ENCRYPTED_2FB15357D122_IV }}
 
